Temporary renamed test to staging in secrets.yml and corrected height of grey box behind navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,6 @@ body {
     min-height: 100% !important;
 }
 .page-navbar-color {
-    height: 85px;
+    height: 80px;
     background-color: lightgrey;
 }
